2014-09-30 Matt:
	* Changed antenna position for default to 1km for comparison with ZHS.
	* Checked agreement between ZHS and G4 for 40 MeV after bug fixes.
	* Added all plots to output root file from APotPlots.py
	* updated EField script to check scaling results. Everything seems consistent
	* Updated VPCompareZHS to include latest ZHS comparison files.
	* Updated iceblock from R10m to R1000m following update in antenna position
	* TODO: Add antennta default distance as a parameter
	* Adding makeRefractionScan.py -- This is still work in progress.
		- Right now for angles near critical angle, z increases when it should continue
		decreasing. I think it has to do with the sign ambiguity. Try to impose some
		requirements.

2014-09-29 Matt:
	* Updating some minor changes after figuring out difference with ZHS.
	* Committing verified version with velocity correction in place.
	* Committing E-field drawing script.  Need to add more modularity for future

2014-09-09 Matt:
	* Committing debugged vector potential calculation. Right now two ways to calculate the velocity.
	* Adding python script to make Vector potential plots
	* Adding python script to make Cherenkov Ring plots
	* Adding python script to make filelists for Zscan and Cherenkov scan
	* Adding scripts to compare velocity calculation procedure
	* Adding scripts to format cherenkov scan results
	* Adding script to format the vector potential comparison for ZHS vs. Geant4
	* Adding class for Antenna and one for setting up the antenna


2014-08-5 Matt:
	* Adding vector potential calculation. First pass looks reasonable.
	* Update SetupAntenna to loop over angles for fixed position.
	* Fixed timing bin factor in calculation of vector potential

2014-08-04 Matt:
	* Minor updates to settings.
	* Going to add calculation of electric field for step information. Tag first

2014-05-29 Matt:
	* Updating some minor changes during running.
	* Going to build realistic setup for ELS site.

2014-03-27 Matt: