@@ -54,7 +54,8 @@ SetupAntenna::SetupAntenna(std::string infile)
 				  R*cos(angle),
 				  R * sf - 10,
 				  2000,
-				  0.01) );
+				  0.01,
+				  0,0) );
   }// end loop over angles
 
   /*
@@ -116,6 +117,8 @@ void SetupAntenna::readAntennaFromFile(std::string infile)
   G4double x = 0;
   G4double y = 0;
   G4double z = 0;
+  G4double angle = 0;
+  G4double refAngle = 0;
 
   // hack to not double count last line
   G4double prevX = 0;
@@ -123,7 +126,7 @@ void SetupAntenna::readAntennaFromFile(std::string infile)
   G4double prevZ = 0;
   while( input.good() ){
 
-    input >> x >> y >> z;
+    input >> x >> y >> z >> angle >> refAngle;
     
     // Not the best way (comparing doubles) but
     // try this for now...
@@ -134,11 +137,14 @@ void SetupAntenna::readAntennaFromFile(std::string infile)
 
     G4double R = sqrt(x*x+y*y+z*z);
 
-    G4cout<<"Setting antenna: "<<x<<" "<<y<<" "<<z<<" "<<R<<G4endl;
+    G4cout<<"Setting antenna: "<<x<<" "<<y<<" "<<z<<" "<<R
+	  <<" "<<angle<<" "<<refAngle<<G4endl;
     m_ants.push_back( new Antenna(x,y,z,
                                   R * sf - 10,
                                   np,
-                                  stepSize) );
+                                  stepSize,
+				  angle,
+				  refAngle) );
 
   }
     
